src/snapshots/jj_pr__tests__log@hydro-prs-approved-1778006800.json.gz.snap
---
source: src/tests.rs
expression: "render_log(&f, false)"
input_file: src/fixtures/hydro-prs-approved-1778006800.json.gz
---
[1m[32m@[0m  [1m[35mwwzknkzponxn[0m [34m62586d9ce265[0m [1m[35mmingwei/delete-delaytype[0m [1m[35msandbox-983e683f-b411-4b48-8268-af9a6da7e5a2[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2841PR #2841]8;;[0m* [32mReady[0m
│  Remove DelayType::Stratum and DelayType::MonotoneAccum from operator input_delaytype_fn
○  [1m[35mnpvopmrtwqpt[0m [34m133b3b074419[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2841PR #2841]8;;[0m* [32mReady[0m
│  Remove DelayType::Stratum and DelayType::MonotoneAccum variants
│ ○  [1m[35mltloqrxtnksl[0m [34m8d8dd5915062[0m [1m[35mmingwei/sqs-rebase[0m [1m[35msandbox-236c6a7a-2597-4c57-95fc-46268f948b7a[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ │  address PR #2746 review comments for AWS SQS support
│ │ ○  [1m[35mpottkzsmnous[0m [34m54ff344f8cdc[0m [1m[35mmingwei/delete-owo-dots[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2836PR #2836]8;;[0m [32mReady[0m
│ │ │  refactor(dfir_lang): remove `..` from OperatorWriteOutput destructures in delegating operators
│ │ ○  [1m[35mmupronqqtrzw[0m [34m2a0e462882fe[0m [1m[35mmingwei/delete-state-api[0m [1m[35msandbox-d1234b5e-7943-406e-86c5-0b2b7b3bbcd4[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2835PR #2835]8;;[0m [32mReady[0m
│ │ │  refactor(dfir_lang): Remove the now-unused state API (add_state, state_ref_unchecked, set_state_lifespan_hook)
│ │ │ ○    [1m[35mmzoyxxzzzpuy[0m [34m0688da0f978d[0m [1m[35mmingwei/delete-subgraph-id[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2812PR #2812]8;;[0m [33mDraft[0m
│ │ │ ├─╮  cleanup: remove SubgraphId, SubgraphTag, LoopId, LoopTag, simplify StateLifespan
│ │ │ ○ │  [1m[35mvlmvtqpnuwor[0m [34m08d7f9241460[0m [1m[35mmingwei/delete-schedule-subgraph-args[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2811PR #2811]8;;[0m [32mReady[0m
│ │ │ │ │  Clean up empty write_iterator_after fields left over from schedule_subgraph removal
│ ○ │ │ │  [1m[35mzqxzmtrvpyzy[0m [34mb32fb1a1427c[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ │ │ │ │  re-enable aws feature gating
│ ○ │ │ │  [1m[35mrpnyusryuvux[0m [34m65554c8873a2[0m [1m[35msandbox-2aebe241-661a-4fc0-8b40-bc0740d6c156[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ │ │ │ │  Fix clippy warnings in hydro_test SQS module
│ ○ │ │ │  [1m[35mlsuxxwwlvloy[0m [34m09d079c68d44[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ │ │ │ │  enable credentials-login feature for getting login from `aws` cli
│ ○ │ │ │  [1m[35mzkpvyxzntswr[0m [34mfe2ea6edd91c[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ │ │ │ │  enable credentials-login feature for getting login from `aws` cli
│ ○ │ │ │  [1m[35mowkpmukqqlwx[0m [34m0a0e602baade[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ │ │ │ │  cleanup sqs one-write code
│ ○ │ │ │  [1m[35monsovwqumzxm[0m [34m8584f2675e52[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ │ │ │ │  SQS working!
│ ○ │ │ │  [1m[35mtuwnswwkwnov[0m [34m2da08fe62dc4[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m* [32mReady[0m
│ ├─╯ │ │  add aws, sqs hydro_test
│ │   │ ○  [1m[35munrvosywmqum[0m [34m5c872dd0032e[0m [1m[35mmingwei/delete-metrics-slotvec[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2810PR #2810]8;;[0m [32mReady[0m
│ │   │ │  cleanup: inline slotmap_key_ffi helper for clarity
│ │   │ ○  [1m[35mskzzksouynsz[0m [34maa12c7d55778[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2810PR #2810]8;;[0m [32mReady[0m
│ ├─────╯  refactor(dfir_rs): use slotmap SecondaryMap for metrics, remove custom slot_vec tags
○ │   │  [1m[35mwoynknkzwqry[0m [34mf959a3be1946[0m [1m[35mmingwei/singleton-refs-dfir[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2829PR #2829]8;;[0m [32mReady[0m
├─╯   │  Move DFIR singleton handling from RefCell to plain local variables
│     ○  [1m[35mnupvxxvukuwt[0m [34m176446f9ad93[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2811PR #2811]8;;[0m [32mReady[0m
│     │  cleanups
│     ○  [1m[35muxksyklwwwzn[0m [34m07575a31ce8f[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2811PR #2811]8;;[0m [32mReady[0m
│     │  cleanup: remove no-op schedule_subgraph(false) calls, fix formatting
│     ○  [1m[35mwttuzpxxzqkx[0m [34ma9b358c79f5b[0m [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2811PR #2811]8;;[0m [32mReady[0m
├─────╯  refactor: remove SubgraphId argument from schedule_subgraph, remove current_subgraph
[1m[36m◆[0m  [1m[35mtxoppvwszksq[0m [34m5efd2a8315a0[0m [1m[35mmain[0m [1m[32mtrunk()[0m
│  refactor(dfir_lang): operators capture local state instead of using the state API [ci-bench] (#2801)
[2m~[0m  [2m(elided revisions)[0m
